Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Aliases now work in PM's to the bot too.
    * Added an epic, Werewolf module.
    * Made slog() saner.
    * Syntax for mod_init() changed. Package name is no longer required.
    * Added German translation to Greet help hash. - nridley
    * Added German translation to FML help hash. - nridley
    * Added German translation to Eval help hash. - nridley
    * Added German translation to EightBall help hash. - nridley
    * Added German translation to Dictionary help hash. - nridley
    * Added German translation to Calc help hash. - nridley
    * Added German translation to Bitly help hash. - nridley
    * Added German translation to AUR help hash. - nridley

3.0 Alpha 9
===============================================================================
    * Bug fix: Fixed an exploit in QDB RAND.
    * UNO: Fixed a formatting issue in duration.

3.0 Alpha 8
===============================================================================
    * Full support for custom PREFIX installs (including global installs) has
      been completed.
    * Added fastest/slowest game, most cards and most players records to UNO.
    * Fixed a bug in UNO that allowed users to join more than once.
    * Added optional uno:english option. See documentation for UNO.
    * UNO has a new config option, uno:msg, for setting what method the bot
      uses for private messages.
    * Added command aliasing.
    * Moved botinfo to State::IRC.
    * Added hook on_selfkick for when we are kicked from a channel.
    * Moved chanusers to State::IRC.
    * Created State::IRC.
    * UNO now keeps game duration and cards played count.
    * Added a LOLCAT module for translating English to LOLCAT.
    * EightBall module rewritten.